# msal-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: auth_code.rs  broker.rs  client_credentials.rs  device_code.rs  on_behalf_of.rs  silent_flow.rs
src/: account.rs  authority.rs  cache.rs  config.rs  crypto.rs  error.rs  lib.rs  network.rs  request.rs  response.rs
src/broker/: macos.rs  mod.rs  wam.rs
src/client/: confidential.rs  mod.rs  public.rs
tests/: integration_tests.rs
